--- a/accordion01.html
+++ b/accordion01.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkbox Accordion</title>
-    <link rel="stylesheet" href="./Accordion01.css">
+    <link rel="stylesheet" href="./accordion01.css">
 </head>
 
 <body>
