JavaScrip使用したアコーディオンページ追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Variu UI</title>
+    <title>Varius tab UI</title>
     <style>
         ul {
             width: 50%;
@@ -20,7 +20,7 @@
 <body>
     <ul>
         <li><a href="./accordion01.html">checkboxによるアコーディオン実装</a></li>
-        <li><a href="">JavaScriptによるアコーディオン実装</a></li>
+        <li><a href="./jsaccordion.html">JavaScriptによるアコーディオン実装</a></li>
     </ul>
 </body>
 
